umol-graph/tests/mol_parsing/snapshots/mol_parsing__mol_parsing_suite__run_conformance_test@indigo_sgroups-V2000.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: results
---
expected_category: invalid
category: invalid
molecule:
  success: false
  error:
    error_type: InvalidPropertyLine
    message: "Invalid property line at line 53, col 0"
molecule_lenient:
  success: false
  error:
    error_type: InvalidPropertyLine
    message: "Invalid property line at line 53, col 0"
extended_molecule:
  success: false
  error:
    error_type: InvalidPropertyLine
    message: "Invalid property line at line 55, col 0"
extended_molecule_lenient:
  success: false
  error:
    error_type: InvalidPropertyLine
    message: "Invalid property line at line 55, col 0"
